--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -205,7 +205,7 @@
         </button>
         
         <div class="back-link">
-            <a href="/">
+            <a href="{% url 'website_home' %}">
                 <i class="fas fa-arrow-left"></i> Back to Dashboard
             </a>
         </div>
