--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -913,7 +913,7 @@
                         <i class="fas fa-brain me-2"></i>EduSight
                     </h5>
                     <p class="text-muted">
-                        Empowering students with AI-powered educational analytics and scientific DMIT testing 
+                        Empowering students with advanced educational analytics and scientific DMIT testing 
                         to unlock their true potential and guide their academic journey.
                     </p>
                     <div class="d-flex gap-3 mt-3">
@@ -929,7 +929,7 @@
                         <a href="{% url 'pricing_plans' %}" class="d-block mb-2">EPR Assessment</a>
                         <a href="#" class="d-block mb-2">Academic Analytics</a>
                         <a href="#" class="d-block mb-2">Career Guidance</a>
-                        <a href="#" class="d-block mb-2">AI-Powered Insights</a>
+                        <a href="#" class="d-block mb-2">Advanced Insights</a>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6 mb-4">
