--- a/templates/admin_dashboard/base.html
+++ b/templates/admin_dashboard/base.html
@@ -231,7 +231,7 @@
                             {{ user.first_name|default:"Admin" }}
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/admin-panel/settings/"><i class="fas fa-cog me-2"></i>Settings</a></li>
+                            <li><a class="dropdown-item" href="{% url 'admin_dashboard:settings' %}"><i class="fas fa-cog me-2"></i>Settings</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="/accounts/logout/"><i class="fas fa-sign-out-alt me-2"></i>Logout</a></li>
                         </ul>
