--- a/templates/admin_dashboard/overview.html
+++ b/templates/admin_dashboard/overview.html
@@ -74,25 +74,25 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-3 mb-3">
-                        <a href="/admin-panel/pages/" class="btn btn-outline-primary w-100">
+                        <a href="{% url 'admin_dashboard:pages' %}" class="btn btn-outline-primary w-100">
                             <i class="fas fa-file-alt me-2"></i>
                             Manage Pages
                         </a>
                     </div>
                     <div class="col-md-3 mb-3">
-                        <a href="/admin-panel/users/" class="btn btn-outline-success w-100">
+                        <a href="{% url 'admin_dashboard:users' %}" class="btn btn-outline-success w-100">
                             <i class="fas fa-users me-2"></i>
                             Manage Users
                         </a>
                     </div>
                     <div class="col-md-3 mb-3">
-                        <a href="/admin-panel/backup/" class="btn btn-outline-warning w-100">
+                        <a href="{% url 'admin_dashboard:backup' %}" class="btn btn-outline-warning w-100">
                             <i class="fas fa-database me-2"></i>
                             Create Backup
                         </a>
                     </div>
                     <div class="col-md-3 mb-3">
-                        <a href="/admin-panel/analytics/" class="btn btn-outline-info w-100">
+                        <a href="{% url 'admin_dashboard:analytics' %}" class="btn btn-outline-info w-100">
                             <i class="fas fa-chart-bar me-2"></i>
                             View Analytics
                         </a>
@@ -170,7 +170,7 @@
                 </div>
                 <hr>
                 <div class="text-center">
-                    <a href="/admin-panel/settings/" class="btn btn-sm btn-outline-primary">
+                    <a href="{% url 'admin_dashboard:settings' %}" class="btn btn-sm btn-outline-primary">
                         <i class="fas fa-cog me-1"></i>
                         System Settings
                     </a>
