--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -198,22 +198,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Dashboard</a>
+                        <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/students/">Students</a>
+                        <a class="nav-link" href="{% url 'students:student_list' %}">Students</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/assessments/">Assessments</a>
+                        <a class="nav-link" href="{% url 'assessments:assessment_list' %}">Assessments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/analytics/">Analytics</a>
+                        <a class="nav-link" href="{% url 'analytics:dashboard' %}">Analytics</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/ml/">ML Predictions</a>
+                        <a class="nav-link" href="{% url 'ml_predictions:dashboard' %}">Analytics</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/crm/">CRM</a>
+                        <a class="nav-link" href="{% url 'crm:dashboard' %}">CRM</a>
                     </li>
                 </ul>
                 
@@ -224,7 +224,7 @@
                                 <i class="fas fa-user-circle me-1"></i>{{ user.username }}
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/admin-panel/">Admin Panel</a></li>
+                                <li><a class="dropdown-item" href="{% url 'admin_dashboard:overview' %}">Admin Panel</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="/admin/logout/">Logout</a></li>
                             </ul>
